--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
 python-pptx==1.0.2
 loguru==0.7.2
-gradio==5.1.0
-langchain==0.2.16
-langchain_core==0.2.41
-langchain_community==0.2.17
-langchain_ollama==0.1.3
-langchain_openai==0.1.25
+gradio==5.7.0
+langchain==1.0.7
+langchain_core==1.0.5
+langchain_openai==1.0.3
 python-docx==1.1.2
-Pillow==9.1.0
-torch==2.5.0
+Pillow==11.0.0
+torch==2.9.1
 transformers==4.46.0
 datasets==3.0.2
 accelerate==1.0.1
 librosa==0.10.2.post1
 soundfile==0.12.1
 ffmpeg==1.4
-torchvision==0.20.0
-sentencepiece==0.1.99
+torchvision==0.24.1
+sentencepiece==0.2.1 #support python 3.12
 bitsandbytes==0.44.1
 jupyterlab==4.3.0
+pydantic==2.10.6 #https://github.com/microsoft/OmniParser/issues/275
