--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ soundfile==0.12.1
 ffmpeg==1.4
 torchvision==0.24.1
 sentencepiece==0.2.1 #support python 3.12
-bitsandbytes==0.44.1
+bitsandbytes==0.44.1 #only for linux/window, omit the version if mac 
 jupyterlab==4.3.0
 pydantic==2.10.6 #https://github.com/microsoft/OmniParser/issues/275
